--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
 	<nav>
 		<ul>
-			<li><a href="/">Home</a></li>
+			<li><a href="{{ site.baseurl }}">Home</a></li>
 		</ul>
 	</nav>
 </header>
