--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,16 @@
-<header>
-	<nav>
-		<ul>
-			<li><a href="{{ site.baseurl }}">Home</a></li>
-		</ul>
-	</nav>
-</header>
+<div class="site-header row">
+	<header>
+	<div class="large-12 columns">
+		<div class="logo">
+			<a href="{{ site.baseurl }}"><img src="img/logo.png"></a>
+		</div>
+	</div>
+	<!-- <div class="main-nav large-9 columns">
+		<nav>
+			<ul>
+				<li><a href="{{ site.baseurl }}">Home</a></li>
+			</ul>
+		</nav>
+	</div> -->
+	</header>
+</div>
