--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-<div class="typography">
-	<h1 class="h1">{{ page.title }}</h1>
-
+<div class="row">
+	<h1>{{ page.title }}</h1>
 	{{ content }}
 </div>
