--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -3,3 +3,15 @@
 	Header
 
 -----------------------------------------------*/
+
+.site-header {
+	padding: 1.5em 0;
+}
+
+.logo {
+	width: 15%;
+}
+
+.main-nav {
+	text-align: right;
+}
