--- a/_sass/utilities/_variables.scss
+++ b/_sass/utilities/_variables.scss
@@ -1,13 +1,15 @@
 $base-font-size: 18px;
-$base-font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+$base-font-family: "proxima-nova", "Helvetica Neue", "Helvetica", Arial, sans-serif;
 $base-font-weight: 400;
 
-$heading-font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+$heading-font-family: "proxima-nova", "Helvetica Neue", "Helvetica", Arial, sans-serif;
 $heading-font-weight: 700;
 
 $color-link: #2b48ff;
 $color-text: #333;
 $color-quiet: #bbb;
+$color-brand-primary: #4d9ace;
+$color-brand-secondary: #f6aa9e;
 
 $bold-font-weight: 700;
 
