--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,20 @@
-<div class="site-header row">
+<div class="site-header">
   <header>
-    <div class="large-12 columns">
-      <div class="logo">
-        <a href="{{ site.baseurl }}"><img src="img/logo.png"></a>
+    <div class="row">
+      <div class="large-6 columns">
+        <div class="logo">
+          <!-- <a href="{{ site.baseurl }}"><img src="img/logo.png"></a> -->
+          <h1><a href="{{ site.baseurl }}">Recipe Box</a></h1>
+        </div>
+      </div>
+      <div class="large-6 columns">
+        <nav class="main-nav">
+          <ul>
+            <li><a href="{{ site.baseurl }}">Categories</a></li>
+            <li><a href="{{ site.baseurl }}">Search</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
-    <!-- <div class="main-nav large-9 columns">
-      <nav>
-        <ul>
-          <li><a href="{{ site.baseurl }}">Home</a></li>
-        </ul>
-      </nav>
-    </div> -->
   </header>
 </div>
