--- a/_sass/pages/_recipe-list.scss
+++ b/_sass/pages/_recipe-list.scss
@@ -1,5 +1,5 @@
 .intro {
-  padding: 4em 0;
+  padding: 3em 0 4em 0;
   background-color: $color-brand-primary;
   color: #fff;
   line-height: 1.2;
