--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -5,13 +5,36 @@
 -----------------------------------------------*/
 
 .site-header {
-  padding: 1.5em 0;
+  padding: 1em 0;
+  background-color: $color-brand-primary;
+  font-weight: 300;
 }
 
 .logo {
-  width: 15%;
+  // width: 15%;
+
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
 }
 
 .main-nav {
+  // padding-top: .25em;
   text-align: right;
+
+    ul li {
+      display: inline-block;
+
+      a {
+        display: inline-block;
+        padding: 0 1em;
+        color: rgba(255, 255, 255, .7);
+        text-decoration: none;
+
+          &:hover {
+            text-decoration: underline;
+          }
+      }
+    }
 }
