--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*-----------------------------------------------
 
-	Reset
+  Reset
 
 -----------------------------------------------*/
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -1901,10 +1901,10 @@ select {
 }
 /*-----------------------------------------------
 
-	Typography
+  Typography
 
-	See article by John w. Long on modular css typography
-	http://thesassway.com/advanced/modular-css-typography 
+  See article by John w. Long on modular css typography
+  http://thesassway.com/advanced/modular-css-typography 
 
 -----------------------------------------------*/
 .h1, .typography h1, .typography .h1, .h2, .typography h2, .typography .h2, .h3, .typography h3, .typography .h3, .h4, .typography h4, .typography .h4, .h5, .typography h5, .typography .h5, .h6, .typography h6, .typography .h6 {
@@ -1975,7 +1975,7 @@ select {
 
 /*-----------------------------------------------
 
-	Base styles
+  Base styles
 
 -----------------------------------------------*/
 body {
@@ -2004,19 +2004,34 @@ p {
 
 /*-----------------------------------------------
 
-	Header
+  Header
 
 -----------------------------------------------*/
 .site-header {
-  padding: 1.5em 0;
+  padding: 1em 0;
+  background-color: #4d9ace;
+  font-weight: 300;
 }
 
-.logo {
-  width: 15%;
+.logo a {
+  color: #fff;
+  text-decoration: none;
 }
 
 .main-nav {
   text-align: right;
+}
+.main-nav ul li {
+  display: inline-block;
+}
+.main-nav ul li a {
+  display: inline-block;
+  padding: 0 1em;
+  color: rgba(255, 255, 255, 0.7);
+  text-decoration: none;
+}
+.main-nav ul li a:hover {
+  text-decoration: underline;
 }
 
 /*-----------------------------------------------
@@ -2025,7 +2040,7 @@ p {
 
 -----------------------------------------------*/
 .intro {
-  padding: 4em 0;
+  padding: 3em 0 4em 0;
   background-color: #4d9ace;
   color: #fff;
   line-height: 1.2;
