major style updates

--- a/_sass/components/_base.scss
+++ b/_sass/components/_base.scss
@@ -9,6 +9,8 @@ body {
   font-family: $base-font-family;
   font-weight: $base-font-weight;
   line-height: 1.5;
+  color: $color-brand-primary;
+  background-color: $color-background;
 }
 
 a {
