--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,18 @@
 ---
 layout: default
 ---
+
+
+<header>
+  <div class="row">
+    <div class="large-12 columns">
+      <h1>{{ page.title }}</h1>
+    </div>
+  </div>
+</header>
+
 <div class="row">
-  <h1>{{ page.title }}</h1>
-  {{ content }}
+  <div class="large-12 columns">
+    {{ content }}
+  </div>
 </div>
