post page styling

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div class="row">
-    <div class="medium-6 small-centered columns">
+    <div class="medium-12 columns">
       <nav class="footer-nav">
         <ul>
           <li><span style="margin-right: 1em;">Site &amp; Recipies by</span> <a href="http://www.levimcg.com">Levi McGranahan</a></li>
