--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,17 +2,23 @@
 layout: default
 ---
 
-
-<header>
-  <div class="row">
-    <div class="large-12 columns">
-      <h1>{{ page.title }}</h1>
+<div class="post-page">
+  <header class="post-header">
+    <div class="row">
+      <div class="medium-8 medium-centered columns">
+        <h1>{{ page.title }}</h1>
+        <div class="post-description">
+          {{ page.description }}
+        </div>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<div class="row">
-  <div class="large-12 columns">
-    {{ content }}
-  </div>
+  <section class="recipe-instructions">
+    <div class="row">
+      <div class="medium-8 medium-centered columns">
+        {{ content }}
+      </div>
+    </div>
+  </section>
 </div>
