--- a/_sass/components/_base.scss
+++ b/_sass/components/_base.scss
@@ -5,7 +5,7 @@
 -----------------------------------------------*/
 
 body {
-  font-size: $base-font-size;
+  font-size: 120%;
   font-family: $base-font-family;
   font-weight: $base-font-weight;
   line-height: 1.5;
