--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -8,33 +8,41 @@
   padding: 1em 0;
   background-color: $color-brand-primary;
   font-weight: 300;
+
+    a {
+      color: lighten($color-brand-primary, 50%);
+      text-decoration: none;
+        
+        @include hover-trans(.2s);
+
+        &:hover {
+          color: $color-brand-third;
+        }
+    }
 }
 
 .logo {
-  // width: 15%;
 
     a {
-      color: #fff;
-      text-decoration: none;
+      font-weight: 700;
+      font-size: 1.25em;
     }
 }
 
 .main-nav {
-  // padding-top: .25em;
   text-align: right;
 
     ul li {
       display: inline-block;
+      margin-right: 1em;
+
+        &:last-child {
+          margin-right: 0;
+        }
 
       a {
         display: inline-block;
-        padding: 0 1em;
-        color: rgba(255, 255, 255, .7);
         text-decoration: none;
-
-          &:hover {
-            text-decoration: underline;
-          }
       }
     }
 }
