--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta description="" content="{{ site.description }}">
     <title>{{ site.title }} | {{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="//use.typekit.net/spc0dyq.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
