--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="post-page">
   <header class="post-header">
     <div class="row">
-      <div class="medium-8 medium-centered columns">
+      <div class="medium-10 large-7 medium-centered columns">
         <h1>{{ page.title }}</h1>
         <div class="post-description">
           {{ page.description }}
@@ -16,7 +16,7 @@ layout: default
 
   <section class="recipe-instructions">
     <div class="row">
-      <div class="medium-8 medium-centered columns">
+      <div class="medium-10 large-7 medium-centered columns">
         {{ content }}
       </div>
     </div>
