--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
         <nav class="main-nav">
           <ul>
             <li><a href="{{ site.baseurl }}/">Categories</a></li>
-            <li><a href="{{ site.baseurl }}/">Archive</a></li>
-            <li><a href="{{ site.baseurl }}/">About</a></li>
+            <li><a href="{{ site.baseurl }}/all-recipes.html">All recipies</a></li>
+            <!-- <li><a href="{{ site.baseurl }}/">About</a></li> -->
           </ul>
         </nav>
       </div>
