--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,17 +8,25 @@ layout: default
       <div class="medium-10 large-7 medium-centered columns">
         <h1>{{ page.title }}</h1>
         <div class="post-description">
-          {{ page.description }}
+          <p>{{ page.description }}</p>
+        </div>
+        <div class="time-wrapper">
+          <div class="time">
+            <p><span class="lighten">Prep time:</span> {{ page.prep }}</p>
+          </div>
+          <div class="time">
+            <p><span class="lighten">Cook time:</span> {{ page.cook }}</p>
+          </div>
         </div>
       </div>
     </div>
   </header>
 
-  <section class="recipe-instructions">
+  <article class="recipe-instructions">
     <div class="row">
       <div class="medium-10 large-7 medium-centered columns">
         {{ content }}
       </div>
     </div>
-  </section>
+  </article>
 </div>
