--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -19,7 +19,7 @@
     }
 
     ul {
-      margin-left: 1em;
+      margin-left: 1.1em;
       list-style-type: disc;
 
         li {
@@ -28,12 +28,11 @@
     }
 
     ol {
-      margin-left: 1em;
+      margin-left: 1.1em;
       list-style-type: decimal;
 
         li {
           padding: 1em 0;
-          // border-bottom: 1px solid lighten($color-brand-primary, 60%);
 
             &:first-child {
               padding-top: 0;
@@ -43,11 +42,42 @@
 }
 
 .post-header {
-  padding: 2em 0;
+  padding-top: 2em;
 }
 
 .post-description {
+  margin-bottom: 1em;
   font-size: 2em;
   line-height: 1.2;
 }
+
+.time {
+  float: left;
+  margin-right: 1em;
+
+    p {
+      margin-bottom: 0;
+    }
+}
+
+.lighten {
+  color: $color-quiet;
+}
+
+@include responsive(40.063em) {
+
+    .post-page {
+
+        h1 {
+          font-size: 2.25em;
+        }
+    }
+
+    .post-description {
+      font-size: 1.5em;
+    }
+
+}
+
+
 
