--- a/css/style.css
+++ b/css/style.css
@@ -1993,11 +1993,11 @@ body {
 }
 
 a {
-  color: #2b48ff;
-  text-decoration: underline;
+  color: #ec5d5d;
+  text-decoration: none;
 }
 a:hover {
-  text-decoration: none;
+  color: #e21b1b;
 }
 
 p {
@@ -2083,7 +2083,7 @@ p {
 .intro {
   padding: 3em 0 4em 0;
   background-color: #324264;
-  color: #52ddaa;
+  color: #f8f8f1;
   line-height: 1.2;
 }
 .intro h1 {
@@ -2095,9 +2095,16 @@ p {
   font-size: 2.25em;
   font-weight: 300;
 }
-
-.sidebar ul li {
-  padding: .5em 0;
+@media screen and (max-width: 40.063em) {
+  .intro {
+    padding: 1em 0 2em 0;
+  }
+  .intro h1 {
+    font-size: 2.25em;
+  }
+  .intro p {
+    font-size: 1.5em;
+  }
 }
 
 .recipe-list {
@@ -2123,7 +2130,7 @@ p {
   transition: all 0.17s ease;
 }
 .recipe-list h3 a:hover {
-  color: #52ddaa;
+  color: #ec5d5d;
 }
 .recipe-list ol li {
   padding: 2em 0;
@@ -2141,6 +2148,11 @@ p {
 
 .key-text {
   padding-top: .45em;
+}
+
+.all-recipes ul li {
+  padding: 1em 0;
+  border-bottom: 1px solid #8699c3;
 }
 
 .post-page {
@@ -2161,14 +2173,14 @@ p {
   font-weight: 700;
 }
 .post-page ul {
-  margin-left: 1em;
+  margin-left: 1.1em;
   list-style-type: disc;
 }
 .post-page ul li {
   margin-bottom: .5em;
 }
 .post-page ol {
-  margin-left: 1em;
+  margin-left: 1.1em;
   list-style-type: decimal;
 }
 .post-page ol li {
@@ -2179,10 +2191,33 @@ p {
 }
 
 .post-header {
-  padding: 2em 0;
+  padding-top: 2em;
 }
 
 .post-description {
+  margin-bottom: 1em;
   font-size: 2em;
   line-height: 1.2;
+}
+
+.time {
+  float: left;
+  margin-right: 1em;
+}
+.time p {
+  margin-bottom: 0;
+}
+
+.lighten {
+  color: #8699c3;
+}
+
+@media screen and (max-width: 40.063em) {
+  .post-page h1 {
+    font-size: 2.25em;
+  }
+
+  .post-description {
+    font-size: 1.5em;
+  }
 }
