adding archive page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,15 +4,15 @@
       <div class="large-6 columns">
         <div class="logo">
           <!-- <a href="{{ site.baseurl }}"><img src="img/logo.png"></a> -->
-          <h1><a href="{{ site.baseurl }}/">Recipe Box</a></h1>
+          <h1><a href="{{ site.baseurl }}/">Recipe Book</a></h1>
         </div>
       </div>
       <div class="large-6 columns">
         <nav class="main-nav">
           <ul>
-            <li><a href="{{ site.baseurl }}/">Categories</a></li>
-            <li><a href="{{ site.baseurl }}/all-recipes.html">All recipies</a></li>
-            <!-- <li><a href="{{ site.baseurl }}/">About</a></li> -->
+            <li><a href="{{ site.baseurl }}/">Latest Recipes</a></li>
+            <li><a href="{{ site.baseurl }}/archive/">Archive</a></li>
+            <li><a href="{{ site.baseurl }}/">About</a></li>
           </ul>
         </nav>
       </div>
