--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,10 +12,10 @@ layout: default
         </div>
         <div class="time-wrapper">
           <div class="time">
-            <p><span class="lighten">Prep time:</span> {{ page.prep }}</p>
+            <p>Prep time: <span class="bold">{{ page.prep }}</span></p>
           </div>
           <div class="time">
-            <p><span class="lighten">Cook time:</span> {{ page.cook }}</p>
+            <p>Cook time: <span class="bold">{{ page.cook }}</span></p>
           </div>
         </div>
       </div>
