--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/js/app.js"></script>
     <script type="text/javascript" src="//use.typekit.net/spc0dyq.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
-<body>
-    {% include header.html %}
+<body class="{{ page.bodyClass }}">
+  {% include header.html %}
 
-      {{ content }}
+    {{ content }}
 
-    {% include footer.html %}
+  {% include footer.html %}
 </body>
 </html>
