--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -19,7 +19,7 @@
       margin-right: 1em;
 
         a {
-          color: $color-brand-primary;
+          color: $color-brand-secondary;
           text-decoration: none;
 
             &:hover {
