--- a/_sass/components/_single-post.scss
+++ b/_sass/components/_single-post.scss
@@ -4,6 +4,7 @@
     h1 {
       font-size: 3em;
       font-weight: 700;
+      letter-spacing: -.025em;
     }
 
     h2 {
@@ -57,6 +58,7 @@
 
     p {
       margin-bottom: 0;
+      color: $color-quiet;
     }
 }
 
@@ -64,20 +66,7 @@
   color: $color-quiet;
 }
 
-@include responsive(40.063em) {
-
-    .post-page {
-
-        h1 {
-          font-size: 2.25em;
-        }
-    }
-
-    .post-description {
-      font-size: 1.5em;
-    }
-
+.bold {
+  font-weight: 700;
+  color: $color-brand-primary;
 }
-
-
-
