--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -8,7 +8,7 @@ $heading-font-weight: 700;
 $color-background: #f8f8f1;
 $color-link: #2b48ff;
 $color-brand-primary: #324264;
-$color-brand-secondary: #ec5d5d;
+$color-brand-secondary: #e06c6c;
 $color-brand-third: #52ddaa;
 $color-quiet: lighten($color-brand-primary, 35%);
 
