--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,17 @@
-<footer class="site-footer">
-  <div class="row">
-    <div class="medium-12 columns">
-      <nav class="footer-nav">
-        <ul>
-          <li><span style="margin-right: 1em;">Site &amp; Recipies by</span> <a href="http://www.levimcg.com">Levi McGranahan</a></li>
-          <li><a href="http://creativecommons.org/licenses/by-nc/4.0/">License</a></li>
-          <li><a href="https://github.com/levimcg/recipe-book/tree/gh-pages">Source</a></li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-</footer>
+      <footer class="site-footer">
+        <div class="row">
+          <div class="medium-12 columns">
+            <nav class="footer-nav">
+              <ul>
+                <li><a href="http://www.levimcg.com">&copy;Levi McGranahan</a></li>
+                <li><a href="http://creativecommons.org/licenses/by-nc/4.0/">License</a></li>
+                <li><a href="https://github.com/levimcg/recipe-book/tree/gh-pages">Source</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </footer>
+
+    </div><!-- content div -->
+  </div><!-- page div -->
+</div><!-- site-wrapper div -->
