--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,15 @@
     <meta description="" content="{{ site.description }}">
     <title>{{ site.title }} | {{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="http://cdn.foundation5.zurb.com/foundation.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/js/app.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/js/script.js"></script>
     <script type="text/javascript" src="//use.typekit.net/spc0dyq.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
-<body class="{{ page.bodyClass }}">
+<body class="{{ page.body }}">
   {% include header.html %}
 
     {{ content }}
