--- a/_sass/components/_recipe-list.scss
+++ b/_sass/components/_recipe-list.scss
@@ -42,19 +42,10 @@
 
 .category-meta {
   font-size: .8125em;
+  color: $color-quiet
 }
 
 .category-link {
   color: $color-brand-primary;
   font-weight: 700;
 }
-
-
-
-
-
-
-
-
-
-
