--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -2,7 +2,7 @@
 @import "global/variables";
 @import "global/mixins";
 @import "global/reset";
-@import "global/foundation-grids";
+@import "global/clearfix";
 
 @import "components/typography";
 @import "components/base";
