--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,9 +28,12 @@ layout: default
       </div>
     </div>
     <div class="row">
+
       <div class="large-7 medium-10 medium-centered columns">
         {{ content }}
+        {% include article-nav.html %}
       </div>
+    
     </div>
   </article>
 </div>
