--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -70,13 +70,14 @@
     }
 }
 
-.lighten {
-  color: $color-quiet;
+i.fa-chevron-left {
+  margin-right: 1em;
+  color: $color-brand-secondary;
 }
 
-.bold {
-  font-weight: 700;
-  color: $color-brand-primary;
+i.fa-chevron-right {
+  margin-left: 1em;
+  color: $color-brand-secondary;
 }
 
 @include responsive(50em) {
