--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -9,6 +9,6 @@
 @import "components/header";
 @import "components/intro";
 @import "components/recipe-list";
-@import "components/single-post";
+@import "components/article";
 @import "components/recipe-archive";
 @import "components/footer";
