--- a/_includes/article-nav.html
+++ b/_includes/article-nav.html
@@ -2,10 +2,10 @@
   <div class="row">
     <nav>
       <div class="small-6 columns">
-        <a class="previous" href="{{ site.baseurl }}/archive/"><i class="fa fa-chevron-left"></i>Recipe Archive</a>
+        <a class="previous" href="/archive"><i class="fa fa-chevron-left"></i>Recipe Archive</a>
       </div>
       <div class="small-6 columns text-right">
-        <a href="{{ site.baseurl }}/#recent-recipes">Newest Recipes<i class="fa fa-chevron-right"></i></a>
+        <a href="/#recent-recipes">Newest Recipes<i class="fa fa-chevron-right"></i></a>
       </div>
     </nav>
   </div>
