--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,14 @@
       <div class="site-header-inner">
         <a href="#" class="open-panel"><i class="fa fa-bars"></i></a>
         <div class="logo">
-          <h1><a href="{{ site.baseurl }}/">{{  site.title }}</h1>
+          <h1><a href="/">{{  site.title }}</h1>
         </div>
         <div class="main-nav">
           <nav role="navigation">
             <a href="#" class="close-panel"><i class="fa fa-times-circle"></i></a>
             <ul class="menu">
-              <li><a class="home-nav" href="{{ site.baseurl }}/"><span style="margin-right: .85em; color: rgba(255, 255, 255, .5);"><i class="fa fa-bolt"></i></span>Latest Recipes</a></li>
-              <li><a class="archive-nav" href="{{ site.baseurl }}/archive/ "><span style="margin-right: .85em; color: rgba(255, 255, 255, .5);"><i class="fa fa-archive"></i></span>Archive</a></li>
+              <li><a class="home-nav" href="/"><span style="margin-right: .85em; color: rgba(255, 255, 255, .5);"><i class="fa fa-bolt"></i></span>Latest Recipes</a></li>
+              <li><a class="archive-nav" href="/archive"><span style="margin-right: .85em; color: rgba(255, 255, 255, .5);"><i class="fa fa-archive"></i></span>Archive</a></li>
               <!-- <li><a class="about-nav" href="#"><span style="margin-right: .85em; color: rgba(255, 255, 255, .5);"><i class="fa fa-spoon"></i></span>About</a></li> -->
               <li><a href="https://github.com/levimcg/recipe-book/tree/gh-pages" target="_blank"><span style="margin-right: .85em; color: rgba(255, 255, 255, .5);"><i class="fa fa-github"></i></span>Source on Github</a></li>
             </ul>
