--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script src"http://cdn.foundation5.zurb.com/foundation.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/js/script.js"></script>
+    <script type="text/javascript" src="/js/script.js"></script>
     <script type="text/javascript" src="//use.typekit.net/spc0dyq.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
