--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -25,5 +25,10 @@
   .intro {
     padding: .65em 0 2.5em 0;
     text-align: center;
+
+      h1 {
+        line-height: 1;
+        margin-bottom: .5em;
+      }
   }
 }
