--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -1,8 +1,8 @@
 $base-font-size: 18px;
-$base-font-family: "proxima-nova", "Helvetica Neue", "Helvetica", Arial, sans-serif;
+$base-font-family: "jaf-bernino-sans", "Helvetica Neue", "Helvetica", Arial, sans-serif;
 $base-font-weight: 400;
 
-$heading-font-family: "proxima-nova", "Helvetica Neue", "Helvetica", Arial, sans-serif;
+$heading-font-family: "jaf-bernino-sans", "Helvetica Neue", "Helvetica", Arial, sans-serif;
 $heading-font-weight: 700;
 
 $color-background: #f8f8f1;
