--- a/_sass/components/_base.scss
+++ b/_sass/components/_base.scss
@@ -5,7 +5,7 @@
 -----------------------------------------------*/
 
 body {
-  font-size: 125%;
+  font-size: 20px;
   font-family: $base-font-family;
   font-weight: $base-font-weight;
   font-style: normal;
@@ -14,11 +14,11 @@ body {
   background-color: $color-background;
 
     @include responsive(50em){
-      font-size: 110%;
+      font-size: 18px;
     }
 
     @include responsive(40.063em) {
-      font-size: 100%;
+      font-size: 16px;
     }
 }
 
